# claude-voice

./: README.md  claude_voice.py  pyproject.toml  speak.py
integrations/: hammerspoon-snippet.lua
integrations/raycast/: voice-clip.sh  voice-stop.sh  voice-toggle.sh
tests/: test_daemon_protocol.py  test_routing.py
