[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-voice"
version = "0.2.0"
description = "TTS with karaoke-style word highlighting for Claude Code. Local Kokoro by default; OpenAI, ElevenLabs, Grok and custom providers optional."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Null-Phnix"}]
keywords = ["claude", "tts", "voice", "kokoro", "terminal", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "sounddevice>=0.4",
    "numpy",
]

[project.optional-dependencies]
local = ["kokoro>=0.7"]
all = ["kokoro>=0.7"]

[project.urls]
Homepage = "https://github.com/Null-Phnix/claude-voice"
Repository = "https://github.com/Null-Phnix/claude-voice"

[project.scripts]
claude-voice = "claude_voice:main"

[tool.setuptools]
py-modules = ["claude_voice"]
